--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "react": "^18.2.0",
