--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
+    "firebase": "^10.11.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
