--- a/Client/package.json
+++ b/Client/package.json
@@ -14,8 +14,11 @@
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
+    "cloudinary": "^1.41.3",
     "firebase": "^10.11.0",
     "formik": "^2.4.5",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
