--- a/Client/package.json
+++ b/Client/package.json
@@ -20,11 +20,13 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
   "devDependencies": {
