--- a/Client/package.json
+++ b/Client/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "cloudinary": "^1.41.3",
@@ -27,6 +31,7 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
+    "usehooks-ts": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
